--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,9 +15,11 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "nanoid": "^4.0.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "shortid": "^2.2.16",
     "typescript": "4.9.4"
   }
 }
