--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "cors": "^2.8.5",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "nanoid": "^4.0.0",
@@ -21,5 +22,8 @@
     "react-dom": "18.2.0",
     "shortid": "^2.2.16",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13"
   }
 }
