--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "lorem-ipsum": "^2.0.8",
     "nanoid": "^4.0.0",
     "next": "13.1.2",
     "react": "18.2.0",
